--- a/app/app.tpl.html
+++ b/app/app.tpl.html
@@ -1,1 +1,7 @@
-<h1>Hello Angular2</h1>
+<h1>{{title}}</h1>
+<h2>{{hero.name}} details!</h2>
+<div><label>id: </label>{{hero.id}}</div>
+<div>
+    <label>name: </label>
+    <input type="text" [(ngModel)]="hero.name" placeholder="name">
+</div>
