--- a/app/app.tpl.html
+++ b/app/app.tpl.html
@@ -7,11 +7,4 @@
     </li>
 </ul>
 
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name}} details!</h2>
-    <div><label for="">id: </label>{{selectedHero.id}}</div>
-    <div>
-        <label for="">name: </label>
-        <input type="text" [(ngModel)]="selectedHero.name" placeholder="name">
-    </div>
-</div>
+<my-hero-detail [hero]="selectedHero"></my-hero-detail>
