added a base href tag and styles

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <base href="/">
         <meta charset="utf-8">
         <title>Angular 2 Quickstart</title>
+
+        <link rel="stylesheet" href="styles.css">
 
         <script src="node_modules/es6-shim/es6-shim.min.js"></script>
         <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
@@ -11,6 +14,7 @@
         <script src="node_modules/systemjs/dist/system.src.js"></script>
         <script src="node_modules/rxjs/bundles/Rx.js"></script>
         <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+        <script src="node_modules/angular2/bundles/router.dev.js"></script>
 
         <script>
             System.config({
