--- a/app/app.tpl.html
+++ b/app/app.tpl.html
@@ -1,10 +1,6 @@
 <h1>{{title}}</h1>
-
-<h2>My Heroes</h2>
-<ul class="heroes">
-    <li *ngFor="#hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </li>
-</ul>
-
-<my-hero-detail [hero]="selectedHero"></my-hero-detail>
+<nav>
+    <a [routerLink]="['Heroes']">Heroes</a>
+    <a [routerLink]="['Dashboard']">Dashboard</a>
+</nav>
+<router-outlet></router-outlet>
